vegetation_et_egpyt_evap_visualization_

--- a/Vegetation_NDVI/NDVI_analyze.ipynb
+++ b/Vegetation_NDVI/NDVI_analyze.ipynb
@@ -151,7 +151,7 @@
     "upper_right = \"MOD13A2.A2024257.h21v05.061.2024275120200\" # 오른쪽 위 \n",
     "\n",
     "# 파일 경로를 자동으로 설정\n",
-    "base_path = \"./data/NDVI_TERRA/\"\n",
+    "base_path = \"./data/Vegetation_NDVI/\"\n",
     "\n",
     "# 각 파일의 경로 생성\n",
     "hdf_file_path_1 = f\"{base_path}{upper_left}.hdf\"\n",
@@ -233,7 +233,7 @@
     "# List available SDS datasets.\n",
     "hdf.datasets()\n",
     "\n",
-    "ndvi_terra = hdf.select('1 km 16 days NDVI')\n",
+    "ndvi_terra = hdf.select('1 km 16 days Vegetation_NDVI')\n",
     "\n",
     "# 데이터셋의 실제 값을 읽어오기\n",
     "ndvi_terra_data = ndvi_terra[:]\n",
@@ -276,15 +276,15 @@
     "\n",
     "# HDF 파일 경로들\n",
     "hdf_file_paths = [\n",
-    "    \"./data/NDVI_TERRA/MOD13A2.A2024257.h20v05.061.2024275121224.hdf\",  # 왼쪽 위\n",
-    "    \"./data/NDVI_TERRA/MOD13A2.A2024257.h20v06.061.2024275115107.hdf\",  # 왼쪽 아래\n",
-    "    \"./data/NDVI_TERRA/MOD13A2.A2024257.h21v06.061.2024275115124.hdf\",  # 오른쪽 아래\n",
-    "    \"./data/NDVI_TERRA/MOD13A2.A2024257.h21v05.061.2024275120200.hdf\"   # 오른쪽 위\n",
+    "    \"./data/Vegetation_NDVI/MOD13A2.A2024257.h20v05.061.2024275121224.hdf\",  # 왼쪽 위\n",
+    "    \"./data/Vegetation_NDVI/MOD13A2.A2024257.h20v06.061.2024275115107.hdf\",  # 왼쪽 아래\n",
+    "    \"./data/Vegetation_NDVI/MOD13A2.A2024257.h21v06.061.2024275115124.hdf\",  # 오른쪽 아래\n",
+    "    \"./data/Vegetation_NDVI/MOD13A2.A2024257.h21v05.061.2024275120200.hdf\"   # 오른쪽 위\n",
     "]\n",
     "\n",
     "# 결합할 데이터셋 리스트 (모든 dataset_name)\n",
     "dataset_names = [\n",
-    "    '1 km 16 days NDVI',\n",
+    "    '1 km 16 days Vegetation_NDVI',\n",
     "    '1 km 16 days EVI',\n",
     "    '1 km 16 days VI Quality',\n",
     "    '1 km 16 days red reflectance',\n",
@@ -436,10 +436,10 @@
     "# NumPy 파일 로드\n",
     "ndvi_combined = np.load('1_km_16_days_NDVI_combined.npy')\n",
     "\n",
-    "# NDVI 값 시각화 (색상 맵 적용)\n",
+    "# Vegetation_NDVI 값 시각화 (색상 맵 적용)\n",
     "plt.imshow(ndvi_combined, cmap='RdYlGn')  # NDVI는 식생지수를 나타내므로, 적녹색 컬러맵 사용\n",
-    "plt.colorbar(label='NDVI')  # 컬러바 추가\n",
-    "plt.title('1 km 16 days NDVI Combined')\n",
+    "plt.colorbar(label='Vegetation_NDVI')  # 컬러바 추가\n",
+    "plt.title('1 km 16 days Vegetation_NDVI Combined')\n",
     "plt.show()"
    ],
    "id": "fc64529478e95968",
@@ -558,14 +558,14 @@
     "import folium\n",
     "import os\n",
     "\n",
-    "# NumPy 파일 로드 (이미 결합된 NDVI 데이터)\n",
+    "# NumPy 파일 로드 (이미 결합된 Vegetation_NDVI 데이터)\n",
     "ndvi_combined = np.load('1_km_16_days_NDVI_combined.npy')\n",
     "\n",
-    "# NDVI 시각화를 위한 컬러맵 설정\n",
+    "# Vegetation_NDVI 시각화를 위한 컬러맵 설정\n",
     "cmap = plt.get_cmap('RdYlGn')\n",
     "norm = mcolors.Normalize(vmin=-2000, vmax=10000)\n",
     "\n",
-    "# NDVI 데이터를 0~255 범위의 값으로 변환하여 이미지 생성\n",
+    "# Vegetation_NDVI 데이터를 0~255 범위의 값으로 변환하여 이미지 생성\n",
     "ndvi_image = np.uint8(cmap(norm(ndvi_combined)) * 255)\n",
     "\n",
     "# 이미지 파일로 저장\n",
@@ -573,7 +573,7 @@
     "plt.imsave(output_image_path, ndvi_image)\n",
     "\n",
     "# 이미지 저장 위치 확인\n",
-    "print(f\"NDVI 이미지 저장 완료: {output_image_path}\")"
+    "print(f\"Vegetation_NDVI 이미지 저장 완료: {output_image_path}\")"
    ],
    "id": "bcd478999455ff27",
    "outputs": [
@@ -606,7 +606,7 @@
     "# Folium 지도 생성 (중심점 및 줌 설정)\n",
     "m = folium.Map(location=[(min_lat + max_lat) / 2, (min_lon + max_lon) / 2], zoom_start=5)\n",
     "\n",
-    "# NDVI 이미지 타일 추가\n",
+    "# Vegetation_NDVI 이미지 타일 추가\n",
     "folium.raster_layers.ImageOverlay(\n",
     "    image=output_image_path,\n",
     "    bounds=[[min_lat, min_lon], [max_lat, max_lon]],\n",
