--- a/Vegetation_ET/ET.ipynb
+++ b/Vegetation_ET/ET.ipynb
@@ -57,9 +57,8 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# 증발산(ET, \n",
-    ")\n",
-    "**증발산(ET, Evapotranspiration)**에 대한 데이터를 요약한 표가 있습니다. 증발산은 지표면에서의 증발과 식물의 증산을 합친 개념으로, 물 가용성, 가뭄 상태, 작물 생산 등을 평가하는 데 유용합니다. 이를 통해 작물의 물 사용량을 예측하고, 농업용수 관리에 도움이 됩니다.\n",
+    "# 증발산(ET)\n",
+    "** 증발산(ET, Evapotranspiration)**에 대한 데이터를 요약한 표가 있습니다. 증발산은 지표면에서의 증발과 식물의 증산을 합친 개념으로, 물 가용성, 가뭄 상태, 작물 생산 등을 평가하는 데 유용합니다. 이를 통해 작물의 물 사용량을 예측하고, 농업용수 관리에 도움이 됩니다.\n",
     "\n",
     "### 주요 항목:\n",
     "\n",
@@ -706,7 +705,7 @@
    "source": [
     "# 각 변수명과 그에 대한 타입을 함께 출력\n",
     "for var_name, var in ds.data_vars.items():\n",
-    "    print(f\"Variable: {var_name}, Type: {var.dtype}, Dimensions: {var.dims}\")\n"
+    "    print(f\"Variable: {var_name}, Type: {var.dtype}, Dimensions: {var.dims}\")"
    ],
    "id": "2f2ccda4f27bb943",
    "outputs": [
